--- a/index.html
+++ b/index.html
@@ -3,32 +3,59 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Hydra Projects</title>
+  <title>HydraProjects</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      margin: 0;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+      background-color: #f9f9f9;
+      color: #222;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+      justify-content: center;
+      align-items: center;
       text-align: center;
-      margin-top: 100px;
+      padding: 20px;
     }
     h1 {
+      font-weight: 700;
       font-size: 3rem;
-      margin-bottom: 50px;
+      margin-bottom: 1rem;
     }
-    a.project-link {
-      display: block;
-      margin: 10px auto;
-      font-size: 1.5rem;
-      color: #0066cc;
+    ul {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+      max-width: 320px;
+      width: 100%;
+    }
+    li {
+      background: #fff;
+      margin: 0.5rem 0;
+      padding: 1rem 1.5rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgb(0 0 0 / 0.1);
+      transition: background-color 0.2s ease;
+    }
+    li:hover {
+      background-color: #e0e7ff;
+    }
+    a {
       text-decoration: none;
-      width: max-content;
-    }
-    a.project-link:hover {
-      text-decoration: underline;
+      color: #3b49df;
+      font-weight: 600;
+      font-size: 1.2rem;
+      display: block;
     }
   </style>
 </head>
 <body>
   <h1>Projects</h1>
-  <a href="tcsave.html" class="project-link">Trombone Champ Save Editor</a>
+  <ul>
+    <li><a href="trombonechampsaveeditor.html">Trombone Champ Save Editor</a></li>
+    <!-- Add more projects here -->
+  </ul>
 </body>
 </html>
