--- a/index.html
+++ b/index.html
@@ -2,60 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>HydraProjects</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Hydra Projects</title>
   <style>
     body {
-      margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-      background-color: #f9f9f9;
-      color: #222;
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
-      justify-content: center;
-      align-items: center;
+      font-family: sans-serif;
       text-align: center;
-      padding: 20px;
+      padding-top: 100px;
+      background-color: #f4f4f4;
     }
     h1 {
-      font-weight: 700;
-      font-size: 3rem;
-      margin-bottom: 1rem;
-    }
-    ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-      max-width: 320px;
-      width: 100%;
-    }
-    li {
-      background: #fff;
-      margin: 0.5rem 0;
-      padding: 1rem 1.5rem;
-      border-radius: 8px;
-      box-shadow: 0 2px 6px rgb(0 0 0 / 0.1);
-      transition: background-color 0.2s ease;
-    }
-    li:hover {
-      background-color: #e0e7ff;
+      font-size: 3em;
     }
     a {
+      display: inline-block;
+      margin-top: 20px;
+      font-size: 1.5em;
       text-decoration: none;
-      color: #3b49df;
-      font-weight: 600;
-      font-size: 1.2rem;
-      display: block;
+      color: #007bff;
+    }
+    a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
 <body>
-  <h1>Projects</h1>
-  <ul>
-    <li><a href="trombonechampsaveeditor.html">Trombone Champ Save Editor</a></li>
-    <!-- Add more projects here -->
-  </ul>
+  <h1>Hydra Projects</h1>
+  <p><a href="trombone-editor.html">Trombone Champ Save Editor</a></p>
 </body>
 </html>
